Formulaire d'ajout d'animaux + amélioration code précédent

--- a/templates/animal/index.html.twig
+++ b/templates/animal/index.html.twig
@@ -4,7 +4,7 @@
     <style>
         .example-wrapper {
             margin: 1em auto;
-            max-width: 800px;
+            max-width: 1000px;
             width: 95%;
             font: 18px/1.5 sans-serif;
         }
@@ -33,6 +33,12 @@
             display: flex;
             align-items: center;
         }
+        .card-img {
+            height: 315px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+        }
     </style>
 
     <div class="example-wrapper">
@@ -47,7 +53,9 @@
                                 On affiche une image par default
                             #}
                             {% if animal.picture %}
-                            <img src="{{ asset("img/uploads/" ~ animal.picture) }}" class="card-img-top" alt="animal_picture">
+                                <div class="card-img">
+                                    <img src="{{ asset("img/uploads/" ~ animal.picture) }}" class="card-img-top" alt="animal_picture">
+                                </div>
                             {% else %}
                                 <img src="/img/default_picture.jpg" class="card-img-top" alt="default_image">
                             {% endif %}
@@ -57,7 +65,13 @@
                                     <h6 class="card-title-2">{{ animal.age }} {{ 'ans' | trans }}</h6>
                                 </div>
 
-                                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                <p class="card-text">
+                                    {% if animal.description  %}
+                                        {{ animal.description }}
+                                    {% else %}
+                                        {{ "no-desc" | trans }}
+                                    {% endif %}
+                                </p>
                             </div>
                         </div>
                     </div>
