--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,13 +7,57 @@
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
         {% endblock %}
 
         {% block javascripts %}
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
             {{ encore_entry_script_tags('app') }}
         {% endblock %}
     </head>
     <body>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-success px-5">
+            {% block nav %}
+                <div class="nav-content-container">
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                            <ul class="navbar-nav">
+                                <li class="nav-item active">
+                                    <a class="nav-link" href="/home">Accueil</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="/animal">Animaux</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Produits</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Panier</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Me connecter</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </a>
+                </div>
+            {% endblock %}
+        </nav>
         {% block body %}{% endblock %}
     </body>
+    <style>
+        .nav-content-container {
+            display: flex;
+            flex-direction: row;
+            margin: 0 auto;
+        }
+        ul li a {
+            color: white !important;
+        }
+        ul li {
+            margin: 0 10px;
+        }
+    </style>
 </html>
