--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <header class="bg-light w-100 text-center">
-        <img src="img/uploads/banner.jpg"/>
+        <img src="/img/uploads/banner.jpg"/>
         <div class="content">
             <h1><span class="text-warning">Adopte un pote</span> a actuellement récolté <br>{{ totalDonation }} €</h1>
             <div class="donation mt-4">
@@ -26,20 +26,21 @@
                     <h5 class="modal-title" id="exampleModalLabel">Je fais un don</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div class="modal-body">
-                    <label for="name">Montant du don</label>
-                    <input type="number" min="1" max="100000" name="name" class="form-control"/>
-                    <label for="name">Nom du titulaire de la carte</label>
-                    <input type="text" name="name" class="form-control"/>
-                    <label for="card-number">Numéro de carte</label>
-                    <input type="text" name="card-number" class="form-control"/>
-                    <label for="expiration-date">Date d'expiration</label>
-                    <input type="text" name="expiration-date" class="form-control"/>
-                    <label for="cvv">CVV</label>
-                    <input type="text" name="cvv" class="form-control"/>
-                </div>
-                <div class="modal-footer">
-                    <input type="submit" value="Payer" class="btn btn-primary"/>
+                <div class="modal-body pb-4">
+                    {{ form_start(form) }}
+                        {# form_widget  #}
+                        {{ form_label(form.amount)}}
+                        {{ form_widget(form.amount, {attr: {class: "form-control", min: 1, max: 99999}})}}
+                        <label for="name">Nom du titulaire de la carte</label>
+                        <input type="text" name="name" class="form-control"/>
+                        <label for="card-number">Numéro de carte</label>
+                        <input type="text" name="card-number" class="form-control"/>
+                        <label for="expiration-date">Date d'expiration</label>
+                        <input type="text" name="expiration-date" class="form-control"/>
+                        <label for="cvv">CVV</label>
+                        <input type="text" name="cvv" class="form-control"/>
+                        {{ form_widget(form.Payer, {attr: {class: "form-control btn btn-primay bg-primary text-white mt-3"}})}}
+                    {{ form_end(form) }}
                 </div>
             </div>
         </div>
