--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -25,6 +25,7 @@
 		.bouttonSupprimer {
 			display: flex;
 			justify-content: center;
+			cursor: pointer;
 
 		}
 		.titreCategorie {
@@ -32,13 +33,23 @@
 			border-bottom: solid 1px black;
 			padding-bottom: 10px;
 		}
-		.deuxiemeBloc {
+
+
+		.blocboutton {
+			display: flex;
+			justify-content: center;
+			margin-top: 50px;
+		}
+		.test {
 			margin-top: 60px;
+		}
+		a {
+			text-decoration: none;
 		}
 	</style>
 
 
-	<h1 style="text-align: center; margin-top: 20px">Votre Panier</h1><br>
+	<h1 style="text-align: center; margin-top: 5%">Votre Panier</h1><br>
 
 	<div class="container grosBlock">
 		<div class="row">
@@ -48,31 +59,41 @@
 			<h2 class="col-3 titreCategorie">Supprimer du panier</h2>
 		</div>
 
-		<ul class="list-group list-group-flush deuxiemeBloc">
+		<ul class="list-group list-group-flush">
 			{% for panier in Cart %}
 				<li class="list-group-item">
-					<div class="row g-5">
+					<div class="row g-3 test">
 						<h3 class="col-3 nomProduit">{{ panier.productid.name }}</h3>
 						<h3 class="col-3 quantityProduit">{{ panier.quantity }}</h3>
 
 						{% if(panier.quantity > 1) %}
 
-							<h3 class="col-3 prixProduit">{{ panier.productid.price * panier.quantity }}€</h3>
+							<h3 class="col-3 prixProduit">{{ panier.productid.price * panier.quantity }}
+								€</h3>
 
 
 						{% else %}
 
-							<h3 class="col-3 prixProduit">{{ panier.productid.price }}€</h3>
+							<h3 class="col-3 prixProduit">{{ panier.productid.price }}
+								€</h3>
 
 
 						{% endif %}
 						<div class="col-3 cadreBoutton">
-							<button type="button" class="btn btn-primary w-50 bouttonSupprimer">Supprimer</button>
+							<a href={{ path('cart_delete', {id: panier.id} ) }}>
+								<button type="button" class="btn btn-primary  bouttonSupprimer">Supprimer</button>
+							</a>
 						</div>
 					</div>
 				</li>
 			{% endfor %}
 		</ul>
+		<div class="row blocboutton">
+			<div class="col-2">
+				<button type="button" class="btn btn-primary ">Commander</button>
+			</div>
+
+		</div>
 	</div>
 
 
