--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -23,6 +23,12 @@
         .card {
             height: 100%;
         }
+        .card-body{
+
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-end;
+        }
 
         .card-title-2 {
             margin-left: 10px;
@@ -37,6 +43,12 @@
             flex-direction: column;
             justify-content: center;
         }
+        .centrerblock{
+            display: flex;
+            justify-content: center;
+
+        }
+
     </style>
 
     <div class="example-wrapper">
@@ -50,18 +62,16 @@
                                 On affiche une image par default
                             #}
                             {% if product.picture %}
-                                <img src="{{ asset("img/uploads/products/" ~ product.picture) }}" class="card-img-top" alt="product_picture">
+                                <img src="{{ asset("img/uploads/" ~ product.picture) }}" class="card-img-top" alt="product_picture">
                             {% else %}
                                 <img src="/img/missing_product.jpg" class="card-img-top" alt="missing_product">
                             {% endif %}
                             <div class="card-body">
-                                <div class="div-card-title">
-                                    <h5 class="card-title">{{ product.name }}</h5>
-                                    <h6 class="card-title-2">{{ product.price }} {{ 'price' | trans }}</h6>
-                                    <h6 class="card-title-2">{{ product.stock }}</h6>
+                                <div class="div-card-title centrerblock">
+                                    <h5 class="card-title ">{{ product.name }}</h5>
+                                    <h6 class="card-title-2 ">{{ product.price }} {{ 'price' | trans }}</h6>
                                 </div>
 
-                                <p class="card-text">description</p>
                             </div>
                         </div>
                     </div>
