update + delete (controller, twig et trad)

--- a/templates/animal/index.html.twig
+++ b/templates/animal/index.html.twig
@@ -39,6 +39,9 @@
             flex-direction: column;
             justify-content: center;
         }
+        .col {
+            height: 100%;
+        }
     </style>
 
     <div class="example-wrapper">
