--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -7,7 +7,7 @@
             margin: 1em auto;
             max-width: 1000px;
             width: 95%;
-            font: 18px/1.5 sans-serif;
+            font: 10px/1.5 sans-serif;
         }
         .example-wrapper code {
             background: #F5F5F5;
@@ -19,7 +19,9 @@
         }
         .card-title {
             font-weight: bold;
+            margin: 12px;
         }
+
         .card {
             height: 100%;
         }
@@ -27,15 +29,23 @@
         .card-title-2 {
             margin-left: 10px;
         }
-        .div-card-title {
-            display: flex;
-            align-items: center;
-        }
         .card-img {
             height: 315px;
             display: flex;
             flex-direction: column;
             justify-content: center;
+        }
+        .button {
+            background: #198754;
+            border-radius: 28px;
+            color: #ffffff;
+            font-size: 20px;
+            padding: 10px 20px 10px 20px;
+            text-decoration: none;
+            border-style: none;
+        }
+        .button:hover {
+            background: #1faa69;
         }
     </style>
 
@@ -54,12 +64,9 @@
                             {% else %}
                                 <img src="/img/missing_product.jpg" class="card-img-top" alt="missing_product">
                             {% endif %}
-                            <div class="card-body">
-                                <div class="div-card-title">
                                     <h5 class="card-title">{{ product.name }}</h5>
                                     <h6 class="card-title-2">{{ product.price }} {{ 'price' | trans }}</h6>
-                                </div>
-                            </div>
+                                    <button class="button">{{ 'addcart' | trans }}</button>
                         </div>
                     </div>
             {% endfor %}
