--- a/templates/animal/info.html.twig
+++ b/templates/animal/info.html.twig
@@ -57,7 +57,7 @@
                         {% endif %}
                     </li>
                 </ul>
-                <a class="btn btn-primary  btn-adopt" href="#" role="button">{{ "adopt" | trans }}</a> {#TODO Mettre la bonne route au formulaire#}
+                <a class="btn btn-primary  btn-adopt" href="/application" role="button">{{ "adopt" | trans }}</a> {#TODO Mettre la bonne route au formulaire#}
             </div>
         </div>
 
