--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,20 +1,23 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}Inscription{% endblock %}
 
 {% block body %}
+
+
     {% for flashError in app.flashes('verify_email_error') %}
         <div class="alert alert-danger" role="alert">{{ flashError }}</div>
     {% endfor %}
 
-    <h1>Register</h1>
+    <h1 style="margin-left: 10px">Inscription</h1>
 
     {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
-        }) }}
-
-        <button type="submit" class="btn">Register</button>
+        <label style="margin-left: 10px">Email</label>
+        {{ form_widget(registrationForm.email,{attr:{class:"form-control"}}) }}
+        <br>
+        <label style="margin-left: 10px">Mot de passe</label>
+        {{ form_widget(registrationForm.plainPassword,{attr:{class:"form-control"}}) }}
+        <br>
+        <button type="submit" class="btn btn-lg btn-primary" style="margin-left: 10px">Inscription</button>
     {{ form_end(registrationForm) }}
 {% endblock %}
