--- a/templates/baseAdmin.html.twig
+++ b/templates/baseAdmin.html.twig
@@ -26,13 +26,13 @@
         <hr>
         <ul class="nav nav-pills flex-column mb-auto">
             <li class="nav-item">
-                <a href="{{ path('admin') }}" class="nav-link text-white" aria-current="page">
+                <a href="{{ path('admin_animals') }}" class="nav-link text-white" aria-current="page">
 
                     {{ "animals" | trans }}
                 </a>
             </li>
             <li>
-                <a href="#" class="nav-link text-white">
+                <a href="{{ path('admin_products') }}" class="nav-link text-white">
 
                     {{ "products" | trans }}
                 </a>
